--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -13,3 +13,8 @@ strings:
   outputs:
     templateName: structured-swift4
     output: Strings.swift
+xcassets:
+  inputs: Assets.xcassets
+  outputs:
+    templateName: swift4
+    output: Assets.swift
